# oop---plant-logger

Object oriented programming - plant logger/: CMakeLists.txt  CMakeLists.txt.user.f358bfc  README.md
Object oriented programming - plant logger/src/: main.cpp  test.h  test2.cpp
Object oriented programming - plant logger/src/common/communications/: client.cpp  client.h  connectionhandler.cpp  connectionhandler.h  datahandler.cpp  datahandler.h
Object oriented programming - plant logger/src/gui/: mainwindow.cpp  mainwindow.h
Object oriented programming - plant logger/src/gui/widgets/: mainpanel.cpp  mainpanel.h
Object oriented programming - plant logger/src/gui/widgets/buttons/: custom_button.cpp  custom_button.h
Object oriented programming - plant logger/src/gui/widgets/textedits/: custom_text_edit.cpp  custom_text_edit.h
